# visual_odometry

./: CMakeLists.txt  README.md  package.xml
data/: d1_0724.bdat  d1_0726.bdat
data/color_ss/: color_structure_sensor_intri.txt
launch/: vro_two_image_structsensor.launch
src/: CMakeLists.txt
src/VRO/: .sparse_feature_vo.cpp.swp  CMakeLists.txt  camera_node.cpp  camera_node.h  camera_node_ba.cpp  camera_node_ba.h  camera_node_pnp.cpp  camera_node_pnp.h  convert.h  covariance_check.h  feature_adjuster.h  feature_detector.cpp  feature_detector.h  matching_result.cpp  matching_result.h  scoped_timer.cpp  sift_gpu_wrapper.cpp  sparse_feature_vo.cpp  sparse_feature_vo.h  test_PnP.cpp  test_cov.cpp  test_two_frame_r200.cpp  test_vro_r200.cpp  test_vro_sr4k.cpp  transformation_estimation_euclidean.cpp  transformation_estimation_euclidean.h  vro_parameter.cpp  vro_parameter.h
